@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.3-cur, done by cs@nop.
--;-;-;2022-03-03 05:17:41, took 00:06:45, with 100 workers, on 2764 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2022-03-03 06:56:39, took 00:07:02, with 100 workers, on 2764 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
