@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.3-cur, done by cs@nop.<br/>
-tested: 2022-03-03 05:17:41, took 00:06:45, with 100 workers, on 2764 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2022-03-03 06:56:39, took 00:07:02, with 100 workers, on 2764 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
